--- a/index.html
+++ b/index.html
@@ -40,12 +40,38 @@
     </nav>
 
     <header class="lowOpacity">
-        <!-- everything above the fold-->
+        <img src="assets/Class 1 Content/Class 1 Content/images/homeHeaderImage.jpg" width="100%">
+        <h1><strong>WildLens Institute</strong></h1>
+        <h3>Where Nature  Unveils it's Frame</h3>
     </header>
 
     <section id="greenSection">
-        <!-- break content into sections for neatness, easier styling and better overall coding control-->
-        <!-- name sections with id or class name-->
+
+        <div class = "RightCol">
+            <img src ="assets/Class 1 Content/Class 1 Content/images/homeAboutSum.jpg" width="100%">
+        </div>
+
+        <div class="LeftCol">
+            <p>At the WildLens Institute, students immerse themselves in the captivating world of wildlife photography,
+                honing technical skills and nurturing creative vision under the guidance of experienced mentors. 
+               Through a dynamic blend of theoretical learning and hands-on fieldwork, participants master camera 
+               techniques, lighting, and composition while gaining insights into wildlife behavior and habitat.
+            </p>
+
+            <p>Beyond technical proficiency, 
+                the institute emphasizes storytelling and ethical practices, 
+                fostering a deep appreciation for conservation and responsible photography. 
+                Graduates emerge not only as skilled photographers but as advocates for 
+                the natural world, equipped to capture its beauty while preserving its delicate balance.
+            </p>
+        </div>
+        <button type="button" onclick="location.href= 'Pages/about.html';">Read More</button>
+    </section>
+
+    <section>
+        <img src ="assets/Class 1 Content/Class 1 Content/images/homeGallery1.jpg" width="33%">
+        <img src ="assets/Class 1 Content/Class 1 Content/images/homeGallery2.jpg" width="33%">
+        <img src ="assets/Class 1 Content/Class 1 Content/images/homeGallery3.jpg" width="33%">
     </section>
 
     <footer>
